etc/k8s/nginx/canary/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-http-test-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-http-test-canary
  template:
    metadata:
      labels:
        app: node-http-test-canary
    spec:
      containers:
      - name: node-http-test-canary
        image: fabiojapa/node-http-test:2.0.1
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 10
        resources:
          requests:
            memory: "16Mi"
            cpu: "20m"
          limits:
            memory: "32Mi"
            cpu: "50m"

---
apiVersion: v1
kind: Service
metadata:
  name: node-http-test-canary-service
  labels:
    app: node-http-test-canary
spec:
  selector:
    app: node-http-test-canary
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-http-test-canary-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: country
    nginx.ingress.kubernetes.io/canary-by-header-value: MX
spec:
  rules:
  - host: sakanary.io
    http:
      paths:
      - backend:
          serviceName: node-http-test-canary-service
          servicePort: 80
